--- a/citycss.css
+++ b/citycss.css
@@ -52,3 +52,65 @@ body {
   height: 100px;
   font-size: 7vw;
 }
+#new1 {
+  background-color: rgba(111, 111, 111, 0.4);
+  border-radius: 2vw;
+  z-index: 1;
+  margin-top: 3vw;
+  margin-left: 8vw;
+  margin-right: 8vw;
+  margin-bottom: 3vw;
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  height: fit-content;
+}
+#new2 {
+  background-color: rgba(111, 111, 111, 0.4);
+  border-radius: 2vw;
+  z-index: 1;
+  margin-top: 3vw;
+  margin-left: 8vw;
+  margin-right: 8vw;
+  margin-bottom: 3vw;
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  height: fit-content;}
+.butt {
+  margin-top: 4vw;
+  margin-bottom: 4vw;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  border-radius: 2vw;
+  background-color: rgb(195, 195, 195);
+  width: 40vw;
+  height: 80px;
+  font-size: 7vw;
+}
+#new22 {
+  background-color: rgba(111, 111, 111, 0.7);
+  border-radius: 2vw;
+  font-size: x-large;
+  z-index: 1;
+  margin-top: 3vw;
+  margin-left: 8vw;
+  margin-right: 8vw;
+  margin-bottom: 3vw;
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  height: fit-content;}
+  #new11 {
+    background-color: rgba(111, 111, 111, 0.7);
+    border-radius: 2vw;
+    font-size: x-large;
+    z-index: 1;
+    margin-top: 3vw;
+    margin-left: 8vw;
+    margin-right: 8vw;
+    margin-bottom: 3vw;
+    display: flex;
+    align-items:center;
+    justify-content:center;
+    height: fit-content;}
