--- a/citycss.css
+++ b/citycss.css
@@ -1,11 +1,14 @@
 body {
-  background-color: rgb(62, 62, 62);
-  background-size: cover;
+  background-color: rgb(255, 255, 255);
   background-repeat: no-repeat;
   overflow: scroll;
+  margin-top: 10%;
   scroll-behavior: smooth;
-  justify-content: center;
   height: fit-content;
+}
+header{
+  display: flex;
+  background-color: rgb(255, 255, 255);
 }
 #bgimg {
   width: 100%;
@@ -16,16 +19,16 @@ body {
   background-attachment: fixed;
 }
 .but:hover {
-  background-color: rgb(96, 96, 96);
+  background-color: rgb(107, 166, 255);
   color: white;
 }
 #main {
-  background-color: rgba(111, 111, 111, 0.4);
+  background-color: rgba(255, 255, 255, 0.4);
   border-radius: 2vw;
   z-index: 1;
   margin-top: 3vw;
-  margin-left: 8vw;
-  margin-right: 8vw;
+  margin-left: 10vw;
+  margin-right: 10vw;
   margin-bottom: 3vw;
   display: grid;
   align-items:center;
@@ -33,30 +36,34 @@ body {
   height: fit-content;
 }
 #wh {
-  width: 100%;
-  background-color: rgba(81, 81, 81, 0.99);
+  width: 70%;
+  padding: 2vw;
+  /* margin-left: 16%;
+  margin-right: 16%; */
+  background-color: rgba(13, 41, 93, 0.99);
   border-radius: 2vw;
-  color: rgb(0, 0, 0);
-  -webkit-text-stroke: 0.5px rgb(93, 92, 92);
-  display: grid;
-  font-size: 8vw;
-  align-items: center;
+  color: rgb(255, 255, 255);
+  display: flex;
+  font-size: 7vw;
   justify-content: center;
 }
 .but {
-  margin-top: 4vw;
+  margin-top: 2vw;
   margin-bottom: 4vw;
+  margin-left: 2vw;
+  margin-right: 2vw;
   border-radius: 2vw;
-  background-color: rgb(195, 195, 195);
-  width: 70vw;
-  height: 100px;
-  font-size: 7vw;
+  background-color: rgba(86, 145, 253);
+  width: 40vw;
+  height: 15vw;
+  font-size: 5vw;
+  color: white;
+  background-image: URL("bg.webp");
 }
 #new1 {
-  background-color: rgba(111, 111, 111, 0.4);
   border-radius: 2vw;
   z-index: 1;
-  margin-top: 3vw;
+  margin-top: 0vw;
   margin-left: 8vw;
   margin-right: 8vw;
   margin-bottom: 3vw;
@@ -66,10 +73,9 @@ body {
   height: fit-content;
 }
 #new2 {
-  background-color: rgba(111, 111, 111, 0.4);
   border-radius: 2vw;
   z-index: 1;
-  margin-top: 3vw;
+  margin-top: 0vw;
   margin-left: 8vw;
   margin-right: 8vw;
   margin-bottom: 3vw;
@@ -78,39 +84,42 @@ body {
   justify-content:center;
   height: fit-content;}
 .butt {
-  margin-top: 4vw;
   margin-bottom: 4vw;
   margin-left: 2vw;
   margin-right: 2vw;
   border-radius: 2vw;
-  background-color: rgb(195, 195, 195);
+  background-color: rgba(13, 41, 93, 0.99);
+  color:white;
   width: 40vw;
   height: 80px;
-  font-size: 7vw;
+  font-size: 5vw;
 }
 #new22 {
-  background-color: rgba(111, 111, 111, 0.7);
   border-radius: 2vw;
-  font-size: x-large;
   z-index: 1;
   margin-top: 3vw;
   margin-left: 8vw;
   margin-right: 8vw;
-  margin-bottom: 3vw;
+  margin-bottom: 1vw;
   display: flex;
-  align-items:center;
   justify-content:center;
-  height: fit-content;}
+  height: fit-content;
+  font-size: 6vw;
+}
+
   #new11 {
-    background-color: rgba(111, 111, 111, 0.7);
     border-radius: 2vw;
-    font-size: x-large;
     z-index: 1;
-    margin-top: 3vw;
+    margin-top: 8vw;
     margin-left: 8vw;
     margin-right: 8vw;
-    margin-bottom: 3vw;
+    margin-bottom: 1vw;
     display: flex;
-    align-items:center;
     justify-content:center;
-    height: fit-content;}
+    height: fit-content;
+    font-size: 6vw;
+  }
+    #header {
+      display: flex;
+      justify-content:center ;
+    }
