--- a/citycss.css
+++ b/citycss.css
@@ -1,125 +1,177 @@
 body {
   background-color: rgb(255, 255, 255);
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   overflow: scroll;
   scroll-behavior: smooth;
-  background-size:cover;
-
+  background-size: contain;
+  background-image: URL("bg.png");
+  height: fit-content;
 }
-header{
-  display: flex;
-  background-color: rgb(255, 255, 255);
+#imgg{
+  display: grid;
+  align-items: end;
+  justify-self:right ;
 }
-#bgimg {
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 80%;
-  opacity: 0.3;
-  position: fixed;
-  z-index: -1;
+#img {
+  background-color: white;
+  width: 16vw;
+  height: 14vw;
+  z-index: 1;
+  justify-self: right;
   
-  background-attachment: fixed;
 }
 .but:hover {
   background-color: rgb(107, 166, 255);
   color: white;
 }
 #main {
-  background-color: rgba(255, 255, 255, 0.4);
   border-radius: 2vw;
   z-index: 1;
-  margin-top: 3vw;
-  margin-left: 10vw;
-  margin-right: 10vw;
+  margin-top: 0vw;
+  margin-left: 0vw;
+  margin-right: 0vw;
+  margin-bottom: 0vw;
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  height: 90%;
+}
+#wh {
+  z-index: -1;
+  width: 100%;
+  padding-top: 10vw;
+  color: rgb(255, 255, 255);
+  display:grid;
+  font-size: 7vw;
+  justify-content: center;
+  align-self: center;
+}
+.but {
+  border-radius: 100%;
+  background-color:rgb(11, 122, 153);
+  width: 25vw ;
+  height: 25vw;
+  font-size: 5.5vw;
+  color: white;
+}
+@keyframes rotate {
+  0%
+  {
+    transform:rotate(0deg) ;
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+  
+}
+#butt {
+  border-radius: 100%;
+  margin: 10px;
+  background-color:rgb(11, 122, 153);
+  color:white;
+  width: 25vw;
+  height: 25vw;
+  font-size: 5vw;
+  justify-content: center;
+  align-content: center;
+}
+#new1 {
+  /* border-radius: 100%; */
+  z-index: 1;
+  margin-top: 0vw;
+  margin-left: 8vw;
+  margin-right: 8vw;
   margin-bottom: 3vw;
   display: grid;
   align-items:center;
   justify-content:center;
   height: fit-content;
 }
-#wh {
-  width: 70%;
-  padding: 2vw;
-  background-color: rgba(13, 41, 93, 0.99);
-  border-radius: 2vw;
-  color: rgb(255, 255, 255);
-  display: flex;
-  font-size: 7vw;
-  justify-content: center;
-}
-.but {
-  margin-top: 2vw;
-  margin-bottom: 4vw;
-  margin-left: 2vw;
-  margin-right: 2vw;
-  border-radius: 2vw;
-  background-color: rgba(86, 145, 253);
-  width: 40vw;
-  height: 15vw;
-  font-size: 5vw;
-  color: white;
-  background-image: URL("bg.webp");
-}
-#new1 {
-  border-radius: 2vw;
-  z-index: 1;
-  margin-top: 0vw;
-  margin-left: 8vw;
-  margin-right: 8vw;
-  margin-bottom: 3vw;
-  display: flex;
-  align-items:center;
-  justify-content:center;
-  height: fit-content;
-}
 #new2 {
-  border-radius: 2vw;
+  border-radius: 100%;
   z-index: 1;
   margin-top: 0vw;
   margin-left: 8vw;
   margin-right: 8vw;
   margin-bottom: 3vw;
-  display: flex;
-  align-items:center;
+  display: grid;
+  align-items:top;
   justify-content:center;
   height: fit-content;}
-.butt {
-  margin-bottom: 4vw;
-  margin-left: 2vw;
-  margin-right: 2vw;
-  border-radius: 2vw;
-  background-color: rgba(13, 41, 93, 0.99);
-  color:white;
-  width: 40vw;
-  height: 80px;
-  font-size: 5vw;
-}
+
 #new22 {
-  border-radius: 2vw;
-  z-index: 1;
-  margin-top: 3vw;
-  margin-left: 8vw;
-  margin-right: 8vw;
-  margin-bottom: 1vw;
-  display: flex;
+  color:white;
+  border-radius: 100%;
+  display: grid;
+  align-self: end;
   justify-content:center;
   height: fit-content;
-  font-size: 6vw;
+  font-size:7vw;
+  padding-bottom: 10%;
 }
 #new11 {
+  color:white;
   border-radius: 2vw;
-  z-index: 1;
-  margin-top: 8vw;
-  margin-left: 8vw;
-  margin-right: 8vw;
-  margin-bottom: 1vw;
-  display: flex;
+  display: grid;
   justify-content:center;
+  align-self: end;
   height: fit-content;
-  font-size: 6vw;
+  font-size:7vw;
+  padding-bottom: 10%;
 }
-  #header {
-    display: flex;
-    justify-content:center ;
-    margin-top: 10%;
+#header {
+  display: flex;
+  justify-content:center ;
+  margin-top: 10%;
 }
+#but1{
+  display: grid;
+  justify-content: center;
+  width:50%;
+  height: 100%;
+}
+#but2{
+  display: grid;
+  justify-content: center;
+  width:50%;
+  height: 100%;
+
+}
+#butt2{
+  display: grid;
+  align-items: end;
+  justify-self: center;
+
+}
+#spare{
+  padding: 50%
+}
+#span{
+  border: 2vw;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#span::before{
+  content: '';
+  position: absolute;
+  width: 30vw;
+  z-index: -1;
+  height: 30vw;
+  border-radius: 100%;
+  background-image: conic-gradient(transparent,#FF5500,#FF5500,#FF5500);
+  animation: 4s rotate linear infinite; ;
+
+}
+/* #butt::before{
+  content: '';
+  position:absolute;
+  width: 30vw;
+  z-index: -1;
+  height: 30vw;
+  border-radius: 100%;
+  background-image: conic-gradient(transparent,#FF5500,#FF5500,#FF5500);
+  animation: 4s rotate linear infinite; ;
+
+} */
