--- a/citycss.css
+++ b/citycss.css
@@ -4,8 +4,14 @@ body {
   overflow: scroll;
   scroll-behavior: smooth;
   background-size: contain;
-  background-image: URL("bg.png");
   height: fit-content;
+  margin: 0;
+}
+#bgimg{
+z-index: -1;
+position: absolute;
+width: 100%;
+height: 100%;
 }
 #imgg{
   display: grid;
