--- a/citycss.css
+++ b/citycss.css
@@ -1,10 +1,17 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
-  background-image: URL("bg.png");
+  background-image: url("bg.png");
   overflow: scroll;
   scroll-behavior: smooth;
   margin: 0;
   background-size:cover;
   background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
 }
 #imgg{
   height: 18vw;
