--- a/citycss.css
+++ b/citycss.css
@@ -4,22 +4,24 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url("Eng.png");
+  /* background-image: url("Eng.png"); */
   background-color: black;
   overflow: scroll;
   scroll-behavior: smooth;
   margin: 0;
   background-size:contain;
-  background-position:bottom;
+  background-position:0 70vw;
   background-repeat: no-repeat;
   width: 100%;
 }
-#imgg{
+#img{
   height: 18vw;
-  display: grid;
+  width:100vw;
+  height: 80vw;
+  display: flex;
   align-self: end;
 }
-#img {
+/* #img {
   background-color: white;
   width: 22vw;
   height: 18vw;
@@ -28,8 +30,7 @@ body {
   z-index: 1;
   align-self: end;
   justify-self: right;
-  
-}
+} */
 .but:hover {
   background-color: rgb(107, 166, 255);
   color: white;
@@ -38,22 +39,21 @@ body {
   border-radius: 2vw;
   z-index: 1;
   display: flex;
-  align-items:center;
+  /* align-items:center; */
   justify-content:center;
-  height: 90%;
+  height: fit-content;
+  margin-bottom: 7vw;
 }
 #wh {
-  float: top;
   z-index: -1;
   width: 100%;
-  /* margin-top: 10vw; */
-  /* padding-top: 10vw; */
-  padding-bottom: 3vw;
+  height: 40vw;
+  padding-bottom: 5vw;
   color: rgb(255, 255, 255);
   display:grid;
-  font-size: 7vw;
+  font-size: 9vw;
   justify-content: center;
-  align-self: center;
+  align-items:center;
 }
 .but {
   border-radius: 100%;
@@ -73,10 +73,22 @@ body {
   }
   
 }
+#buttt{
+  border-radius: 100%;
+  margin: 10px;
+  background-color:hsl(20, 99%, 36%);
+  /* background-image: url("RR.JPEG"); */
+  color:white;
+  width: 25vw;
+  height: 25vw;
+  font-size: 5vw;
+  justify-content: center;
+  align-content: center;
+}
 #butt {
   border-radius: 100%;
   margin: 10px;
-  background-color:rgb(11, 122, 153);
+  background-color:rgb(0, 114, 129);
   color:white;
   width: 25vw;
   height: 25vw;
@@ -128,19 +140,21 @@ body {
   justify-content:right;
   height: fit-content;
   font-size:7vw;
+  padding-right: 2vw;
   padding-bottom: 10%;
 }
 #text{
   justify-self: center;
+  color: white;
 }
 #new11 {
   color:white;
   border-radius: 100%;
   display: grid;
   align-self: top;
-  justify-content:center;
   height: fit-content;
   font-size:7vw;
+  padding-left: 0;
   padding-bottom: 10%;
 }
 #header {
@@ -152,12 +166,12 @@ body {
   display: grid;
   justify-content: center;
   width:50%;
-  height: 100%;
+  height: 50%;
 }
 #but2{
   display: grid;
   width:50%;
-  height: 100%;
+  height: 50%;
 
 }
 #butt2{
