--- a/citycss.css
+++ b/citycss.css
@@ -62,6 +62,8 @@ body {
   height: 25vw;
   font-size: 5.5vw;
   color: white;
+  justify-content: center;
+  align-items: center;
 }
 @keyframes rotate {
   0%
@@ -96,8 +98,8 @@ body {
   justify-content: center;
   align-content: center;
 }
-#new1 {
-  /* border-radius: 100%; */
+/* #new1 {
+  border-radius: 100%;
   z-index: 1;
   margin-top: 0vw;
   margin-left: 8vw;
@@ -107,7 +109,7 @@ body {
   align-items:center;
   justify-content:center;
   height: fit-content;
-}
+} */
 /* #news2 {
   border-radius: 100%;
   z-index: 1;
@@ -120,7 +122,7 @@ body {
   align-self: top;
   height: fit-content;
 } */
-#new2 {
+/* #new2 {
   border-radius: 100%;
   z-index: 1;
   margin-top: 0vw;
@@ -142,12 +144,12 @@ body {
   font-size:7vw;
   padding-right: 2vw;
   padding-bottom: 10%;
-}
+} */
 #text{
   justify-self: center;
   color: white;
 }
-#new11 {
+/* #new11 {
   color:white;
   border-radius: 100%;
   display: grid;
@@ -156,12 +158,12 @@ body {
   font-size:7vw;
   padding-left: 0;
   padding-bottom: 10%;
-}
-#header {
+} */
+/* #header {
   display: flex;
   justify-content:center ;
   margin-top: 10%;
-}
+} */
 #but1{
   display: grid;
   justify-content: center;
