--- a/citycss.css
+++ b/citycss.css
@@ -62,8 +62,8 @@ body {
   height: 25vw;
   font-size: 5.5vw;
   color: white;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 @keyframes rotate {
   0%
