--- a/citycss.css
+++ b/citycss.css
@@ -4,8 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  /* background-image: url("Eng.png"); */
-  background-color: black;
+  background-color: rgb(91, 91, 91);
   overflow: scroll;
   scroll-behavior: smooth;
   margin: 0;
@@ -21,25 +20,10 @@ body {
   display: flex;
   align-self: end;
 }
-/* #img {
-  background-color: white;
-  width: 22vw;
-  height: 18vw;
-  display: grid;
-  margin-bottom: 0vw;
-  z-index: 1;
-  align-self: end;
-  justify-self: right;
-} */
-.but:hover {
-  background-color: rgb(107, 166, 255);
-  color: white;
-}
 #main {
   border-radius: 2vw;
   z-index: 1;
   display: flex;
-  /* align-items:center; */
   justify-content:center;
   height: fit-content;
   margin-bottom: 7vw;
@@ -57,13 +41,12 @@ body {
 }
 .but {
   border-radius: 100%;
-  background-color:rgb(11, 122, 153);
+  background-color:#1aa3ff;
   width: 25vw ;
   height: 25vw;
   font-size: 5.5vw;
   color: white;
-  /* justify-content: center;
-  align-items: center; */
+
 }
 @keyframes rotate {
   0%
@@ -78,8 +61,7 @@ body {
 #buttt{
   border-radius: 100%;
   margin: 10px;
-  background-color:hsl(20, 99%, 36%);
-  /* background-image: url("RR.JPEG"); */
+  background-color:hsl(241, 67%, 49%);
   color:white;
   width: 25vw;
   height: 25vw;
@@ -90,7 +72,7 @@ body {
 #butt {
   border-radius: 100%;
   margin: 10px;
-  background-color:rgb(0, 114, 129);
+  background-color:#1d9c1d;
   color:white;
   width: 25vw;
   height: 25vw;
@@ -98,72 +80,10 @@ body {
   justify-content: center;
   align-content: center;
 }
-/* #new1 {
-  border-radius: 100%;
-  z-index: 1;
-  margin-top: 0vw;
-  margin-left: 8vw;
-  margin-right: 8vw;
-  margin-bottom: 3vw;
-  display: grid;
-  align-items:center;
-  justify-content:center;
-  height: fit-content;
-} */
-/* #news2 {
-  border-radius: 100%;
-  z-index: 1;
-  margin-top: 0vw;
-  margin-left: 8vw;
-  margin-right: 8vw;
-  margin-bottom: 3vw;
-  display: grid;
-  justify-content:center;
-  align-self: top;
-  height: fit-content;
-} */
-/* #new2 {
-  border-radius: 100%;
-  z-index: 1;
-  margin-top: 0vw;
-  margin-left: 8vw;
-  margin-right: 8vw;
-  margin-bottom: 3vw;
-  display: grid;
-  justify-content:center;
-  align-self: top;
-  height: fit-content;
-}    
-#new22 {
-  color:white;
-  border-radius: 100%;
-  display: grid;
-  align-items: right;
-  justify-content:right;
-  height: fit-content;
-  font-size:7vw;
-  padding-right: 2vw;
-  padding-bottom: 10%;
-} */
 #text{
   justify-self: center;
   color: white;
 }
-/* #new11 {
-  color:white;
-  border-radius: 100%;
-  display: grid;
-  align-self: top;
-  height: fit-content;
-  font-size:7vw;
-  padding-left: 0;
-  padding-bottom: 10%;
-} */
-/* #header {
-  display: flex;
-  justify-content:center ;
-  margin-top: 10%;
-} */
 #but1{
   display: grid;
   justify-content: center;
@@ -223,14 +143,3 @@ justify-self: top;
   animation: 4s rotate linear infinite; ;
 
 }
-/* #butt::before{
-  content: '';
-  position:absolute;
-  width: 30vw;
-  z-index: -1;
-  height: 30vw;
-  border-radius: 100%;
-  background-image: conic-gradient(transparent,#FF5500,#FF5500,#FF5500);
-  animation: 4s rotate linear infinite; ;
-
-} */
